@@ -32,6 +32,10 @@ Version 2.6-Beta 1
       "1.2 GB free" is shown instead of "85% used"; thicker capacity bar.
 
   BUGFIXES:
+    * Remove empty folders when deleting tracks from USB Mass Storage collection.
+    * Don't copy tracks to USB Mass Storage collection in move operation.
+    * Fix defunct aborting of transfers to USB Mass Storage collection. (BR 290448)
+    * Do not double-transcode tracks when importing from an audio CD. (BR 263775)
     * Allow ripping of CD tracks with special characters in name tranks to
       Björn Steinbrink. (BR 224437)
     * Don't show organize collection when dropping track on non-collection
